--- a/requirements.txt
+++ b/requirements.txt
@@ -82,6 +82,7 @@ oauthlib==3.2.2
 omegaconf==2.3.0
 packaging==22.0
 pandas==1.5.3
+path==16.6.0
 pathspec==0.9.0
 Pillow==9.4.0
 platformdirs==2.6.2
@@ -110,7 +111,7 @@ scmrepo==0.1.5
 shap==0.41.0
 shortuuid==1.0.11
 shtab==1.5.8
-six==1.16.0
+six==1.15.0
 sklearn==0.0.post1
 slicer==0.0.7
 smmap==5.0.0
