--- a/.github/workflows/main_MLOps-Churn-Prediction.yml
+++ b/.github/workflows/main_MLOps-Churn-Prediction.yml
@@ -2,6 +2,8 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
+export SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True
+
 name: Build and deploy Python app to Azure Web App - MLOps-Churn-Prediction
 
 on:
